package assets;

public enum  AssetList {
    GRASS_TILE,
    SAND_TILE,
    WATER_TILE,
    MOUNTAIN_TILE,
    CASTLE_GRASS_TILE,
    DAMAGED_CASTLE_GRASS_TILE,
    CASTLE_SAND_TILE,
    TREE_TILE,

    PLAYER_LEFT,
    PLAYER_RIGHT,
    ROCK_UP,
    ROCK_DOWN,
    ROCK_LEFT,
    ROCK_RIGHT,

    ROCK_TOPRIGHT,
    ROCK_TOPLEFT,
    ROCK_BOTTOMRIGHT,
    ROCK_BOTTOMLEFT,

    ENEMY_REGULAR_LEFT,
    ENEMY_REGULAR_RIGHT,

    TOWER,

    HEART_ICON,
    KEY_ICON,

    ENEMY_ARCHER_LEFT,
    ENEMY_ARCHER_RIGHT,

    ENEMY_ROCK_THROWER_LEFT,
    ENEMY_ROCK_THROWER_RIGHT,

    ARROW_TOP,
    ARROW_BOTTOM,
    ARROW_LEFT,
    ARROW_RIGHT,
    ARROW_TOP_LEFT,
    ARROW_TOP_RIGHT,
    ARROW_BOTTOM_LEFT,
    ARROW_BOTTOM_RIGHT,

    SPIKE_HIDDEN,
    SPIKE_SHOWN,

    UNKNOWN_ASSET
}
