package projectile;

import java.awt.*;

public interface Projectile {
    boolean update();
    void draw(Graphics g);
}
